--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 <body>
     <h1>DevOps LifeCycle</h1>
         <p>The DevOps lifecycle is a continuous, iterative process for delivering high-quality software faster by breaking down silos between development and operations teams. It involves phases such as Plan, Code, Build, Test, Release, Deploy, Operate, and Monitor, with key practices like continuous integration, continuous delivery, continuous testing, and continuous monitoring to automate and improve the entire software development and operations process.</p>
-    <img src="im.png" alt="FlowChart">
+    <img src="C:\Users\Suraj\Downloads\lifecycle.png" alt="FlowChart">
 
 </body>
+
 </html>
